--- a/frontend/k8s.yaml
+++ b/frontend/k8s.yaml
@@ -25,6 +25,9 @@ spec:
         imagePullPolicy: Always
         command:
         - "/work/run"
+        env:
+        - name: LISTEN_SOCKET
+          value: 0.0.0.0:8080
 ---
 apiVersion: v1
 kind: Service
@@ -34,7 +37,6 @@ metadata:
 spec:
   ports:
   - port: 8080
-    targetPort: 8080
     nodePort: 32222
   selector:
     app: washere
