--- a/frontend/k8s.yaml
+++ b/frontend/k8s.yaml
@@ -9,6 +9,7 @@ metadata:
     component: frontend
 spec:
   replicas: 1
+  revisionHistoryLimit: 0
   selector:
     matchLabels:
       app: washere
