--- a/signature/create/k8s.yaml
+++ b/signature/create/k8s.yaml
@@ -9,6 +9,7 @@ metadata:
     component: creator
 spec:
   replicas: 1
+  revisionHistoryLimit: 0
   selector:
     matchLabels:
       app: washere
