--- a/signature/read/k8s.yaml
+++ b/signature/read/k8s.yaml
@@ -40,9 +40,27 @@ metadata:
 spec:
   ports:
   - port: 8080
-    nodePort: 32223
   selector:
     app: washere
     component: reader
-  type: NodePort
+  type: ClusterIP
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: reader
+  namespace: washere
+spec:
+  ingressClassName: nginx
+  rules:
+  - host: washere.com
+    http:
+      paths:
+      - backend:
+          service:
+            name: reader
+            port:
+              number: 8080
+        path: /signatures
+        pathType: Exact
 ---
