hpa for all deployments

--- a/frontend/k8s.yaml
+++ b/frontend/k8s.yaml
@@ -29,6 +29,11 @@ spec:
         env:
         - name: LISTEN_SOCKET
           value: 0.0.0.0:8080
+        resources:
+          limits:
+            memory: 8Mi
+          requests:
+            cpu: 8m 
 ---
 apiVersion: v1
 kind: Service
@@ -61,4 +66,30 @@ spec:
               number: 8080
         path: /
         pathType: Prefix
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: frontend 
+  namespace: washere
+spec:
+  maxReplicas: 10
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 80
+  - type: Resource
+    resource:
+      name: memory
+      target:
+        type: Utilization
+        averageUtilization: 80
+  minReplicas: 1
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: frontend 
 ---
