--- a/signature/writer/k8s.yaml
+++ b/signature/writer/k8s.yaml
@@ -31,4 +31,35 @@ spec:
           value: postgres://postgres:development@database:5432/washere
         - name: NSQLOOKUPD_URL
           value: nsqlookupd.default:4161
+        resources:
+          limits:
+            memory: 8Mi
+          requests:
+            cpu: 8m
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: writer
+  namespace: washere
+spec:
+  maxReplicas: 10
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 80
+  - type: Resource
+    resource:
+      name: memory
+      target:
+        type: Utilization
+        averageUtilization: 80
+  minReplicas: 1
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: writer
 ---
