--- a/signature/create/k8s.yaml
+++ b/signature/create/k8s.yaml
@@ -31,6 +31,8 @@ spec:
           value: 0.0.0.0:8080
         - name: NSQD_SOCKET
           value: nsqd.default:4150
+        - name: NEW_RELIC_LICENSE
+          value: 
         resources:
           limits:
             memory: 8Mi
